# LBP

./: .gitignore  CMakeLists.txt  README.md
python-scripts/: augment.py  guess.py  prepare.py  test.py  tsne.py
src/: augmentation.cpp  guess.cpp  prepare.cpp  segmentation.cpp  test.cpp  train.cpp
src/include/: augmentation.h  guess.h  prepare.h  segmentation.h  test.h  train.h
src/utils/: formula.cpp  lbp.cpp  utils.cpp
src/utils/include/: formula.h  lbp.h  utils.h
